--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+.body {
+    padding: 0;
+    margin: 0;
+}
+
 .head-container {
     text-align: center;
     font-style: italic;
@@ -9,4 +14,19 @@
 
 .sub-header {
  font-size: 10px;
+}
+
+.card {
+    padding: 10vh;
+    border: 0;
+    margin: 0;
+}
+
+.row {
+   
+}
+
+.card-deck {
+    justify-content: center;
+    padding-top: 3vh;
 }
