--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@ p {
 .head-container {
     text-align: center;
     font-style: italic;
+    padding-top: 5vh;
 }
 
 .main-header {
@@ -26,17 +27,24 @@ p {
 }
 
 .card {
-    padding: 1vw 1vw 0 1vw;
+    padding: 1vw 0 0 0;
     border: 0;
     margin: 0;
     width: 20vw;  
 }
 
+.col-lg-4 {
+    padding: 0;
+}
 
 .card-deck {
     justify-content: center;
     padding-top: 3vh;
     margin-bottom: 0;
+}
+
+#last-container {
+    padding-bottom: 5vh;
 }
 
 .author {
